compiler/typ/tests/fixtures/diagnostics/0449_modules_opaque_operator_mismatch_04.ml.infer.expected
File "0449_modules_opaque_operator_mismatch_04.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0449_modules_opaque_operator_mismatch_04 is not a valid module name.

File "0449_modules_opaque_operator_mismatch_04.ml", line 14, characters 8-22:
14 | let _ = Hidden_delta.x + 4
             ^^^^^^^^^^^^^^
Error: The value Hidden_delta.x has type Hidden_delta.t
       but an expression was expected of type int
